--- a/install-host.yml
+++ b/install-host.yml
@@ -2,4 +2,14 @@
 - hosts: all
   become: yes
   roles:
+    - gpdb
     - gptext
+
+- hosts: mdw6
+  become: yes
+  roles:
+    - gpcc
+    - madlib
+    - postgis
+
+
