--- a/roles/gpcc/vars/main.yml
+++ b/roles/gpcc/vars/main.yml
@@ -1,11 +1,11 @@
 ---
 # greenplum-cc-web-6.0.0-beta.5-rhel7_x86_64.zip
 # greenplum-cc-web-4.7.0-LINUX-x86_64.zip
-gpcc_major_version: 4
-gpcc_minor_version: 7.0
+gpcc_major_version: 6
+gpcc_minor_version: 0.0
 # gpcc_build_version:
-gpcc_rhel_name: LINUX-
-# gpcc_rhel_name: rhel7_
+# gpcc_rhel_name: LINUX-
+gpcc_rhel_name: rhel7_
 
 gpdb_initdb_only_single: false
 gpdb_initdb_with_standby: true
