--- a/roles/madlib/vars/main.yml
+++ b/roles/madlib/vars/main.yml
@@ -1,8 +1,8 @@
 ---
 madlib_major_version: 1
-madlib_minor_version: 15
-madlib_patch_version: 1
-madlib_gpdb_version: gp5
+madlib_minor_version: 16+3
+madlib_patch_version:
+madlib_gpdb_version: gp6
 madlib_rhel_version: rhel7
 madlib_database_name: testdb
 madlib_mdw_hostname: mdw6
@@ -10,3 +10,4 @@ madlib_mdw_hostname: mdw6
 # madlib-1.15.1-gp5-rhel7-x86_64.tar.gza
 # madlib-1.15.1-gp5-rhel6-x86_64.tar.gz
 # madlib-1.15.1-gp4.3orca-rhel5-x86_64.tar.gz
+# madlib-1.16+3-gp6-rhel7-x86_64.tar.gz
